force-app/main/default/objects/TriggerHandler__mdt/fields/AfterInsert__c.field-meta.xml
<CustomField>
    <fullName>AfterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Insert</label>
    <type>Checkbox</type>
</CustomField>