force-app/main/default/objects/TriggerHandler__mdt/fields/AllowBypass__c.field-meta.xml
<CustomField>
    <fullName>AllowBypass__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Bypass</label>
    <type>Checkbox</type>
</CustomField>