force-app/main/default/objects/TriggerHandler__mdt/fields/BypassPermission__c.field-meta.xml
<CustomField>
    <fullName>BypassPermission__c</fullName>
    <label>Bypass Permission</label>
    <length>80</length>
    <type>Text</type>
</CustomField>