force-app/main/default/objects/TriggerHandler__mdt/fields/BypassProfiles__c.field-meta.xml
<CustomField>
    <fullName>BypassProfiles__c</fullName>
    <label>Bypass Profiles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>