force-app/main/default/objects/TriggerHandler__mdt/fields/BypassUsers__c.field-meta.xml
<CustomField>
    <fullName>BypassUsers__c</fullName>
    <label>Bypass Users</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>