force-app/main/default/objects/TriggerHandler__mdt/fields/CascadeDepthLimit__c.field-meta.xml
<CustomField>
    <fullName>CascadeDepthLimit__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Cascade Depth Limit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>