force-app/main/default/objects/TriggerHandler__mdt/fields/IsCritical__c.field-meta.xml
<CustomField>
    <fullName>IsCritical__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Critical</label>
    <type>Checkbox</type>
</CustomField>