force-app/main/default/objects/TriggerHandler__mdt/fields/MaxReentrancy__c.field-meta.xml
<CustomField>
    <fullName>MaxReentrancy__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Max Reentrancy</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>