force-app/main/default/objects/TriggerHandler__mdt/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <label>SObject Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>